Version 1.0.3: Improved code quality and stability - enhanced error handling, added form validation, fixed bugs, improved code architecture, and full internationalization support.